# monorepo

./: .gitignore  Makefile  README.md  docker-compose.notification.yml  docker-compose.notifications.override.nocode.yml  docker-compose.override.nocode.yml  docker-compose.yml
.github/: README.md
.github/workflow/: services.yml
config/: auth-service.env  match-service.env
documentation/: README.md  SETUP.md
frontends/: package-lock.json
infrastructure/: README.md
libs/: README.md
libs/event-lib/: pom.xml  (+1 more)
local-env/: Makefile  README.md  docker-compose.yml  docker-compose_beta-frontend.yml  docker-compose_kafka.yml  docker-compose_match-service.yml  docker-compose_notifications-service.yml  docker-compose_player-service.yml  docker-compose_sonar.yml
postman/: gateway-service.postman_collection.json  kjeldsen.postman_environment.json
services/crons-service/: Cargo.toml  Dockerfile  README.md
services/crons-service/src/: lib.rs  main.rs
services/crons-service/src/adapter_crons/: main.rs
services/crons-service/src/adapter_kafka/: consumer.rs  heartbeat_event.rs  main.rs  mod.rs  producer.rs
services/notifications-service/: .env  Cargo.toml  Dockerfile  README.md
services/notifications-service/resources/ses_templates/: signup_template.json  testing_template.json
services/notifications-service/src/: aws_ses.rs  kafka.rs  main.rs  ses_template.rs
services/notifications-service/src/kafka/: consumers.rs  mod.rs  signup_event.rs
services/notifications-service/src/ses/: aws_ses.rs  aws_ses_client.rs  mod.rs  template_email.rs  template_processor.rs
(+2854 files in other folders)
