[package]
name = "crons-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
kafka = "0.9"
cron = "0.12.0"
chrono = "0.4.23"
log = "0.4.17"
env_logger = "0.10.0"
