[package]
name = "notifications-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
kafka = "0.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
aws-config = "0.54.1"
aws-sdk-sesv2 = "0.24.0"